# gazoz

./: CMakeLists.txt  gazoz.pc.in
include/: application.h  common.h  gazoz.h  window.h
src/: application.c  window.c
